--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,135 +1,104 @@
-﻿<Window x:Class="TagEditor.MainWindow"
+﻿<Window xmlns:Windows="clr-namespace:TagEditor.UI.Windows"  x:Class="TagEditor.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TagEditor"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Background="#FF1F1F1F">
+        WindowStyle="None"
+        Title="MainWindow" Height="450" Width="800" Background="#FF1F1F1F" FontFamily="Cascadia Code">
+
+    <!--Add the WindowChrome object-->
+    <WindowChrome.WindowChrome>
+        <WindowChrome CaptionHeight="34" />
+    </WindowChrome.WindowChrome>
+
+    <!--Title bar button commands-->
+    <Window.CommandBindings>
+        <CommandBinding Command="{x:Static SystemCommands.CloseWindowCommand}" CanExecute="CommandBinding_CanExecute" Executed="CommandBinding_Executed_Close" />
+        <CommandBinding Command="{x:Static SystemCommands.MaximizeWindowCommand}" CanExecute="CommandBinding_CanExecute" Executed="CommandBinding_Executed_Maximize" />
+        <CommandBinding Command="{x:Static SystemCommands.MinimizeWindowCommand}" CanExecute="CommandBinding_CanExecute" Executed="CommandBinding_Executed_Minimize" />
+        <CommandBinding Command="{x:Static SystemCommands.RestoreWindowCommand}" CanExecute="CommandBinding_CanExecute" Executed="CommandBinding_Executed_Restore" />
+    </Window.CommandBindings>
+ 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="20"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
             <RowDefinition />
-            <RowDefinition Height="10"/>
+            <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <!-- tool bar placeholder -->
-        <StackPanel FlowDirection="LeftToRight" Orientation="Horizontal">
-            <Button Content="Open" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
-            <Button Content="Save" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
-            <Button Content="Save As" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
-            <Button Content="Settings" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
-        </StackPanel>
-        <Grid Grid.Row="1" >
+        <!--Caption buttons-->
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right" >
+                <Button Style="{StaticResource MinimizeButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True" ToolTip="Minimize" Command="{x:Static SystemCommands.MinimizeWindowCommand}" />
+                <Button x:Name="RestoreButton" Visibility="Collapsed" Style="{StaticResource RestoreButtonStyle}" Command="{x:Static SystemCommands.RestoreWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" ToolTip="Restore"/>
+                <Button x:Name="MaximizeButton" Visibility="Visible" Style="{StaticResource MaximizeButtonStyle}" Command="{x:Static SystemCommands.MaximizeWindowCommand}" WindowChrome.IsHitTestVisibleInChrome="True" ToolTip="Maximize" />
+                <Button Style="{StaticResource CloseButtonStyle}" WindowChrome.IsHitTestVisibleInChrome="True" ToolTip="Close" Command="{x:Static SystemCommands.CloseWindowCommand}"/>
+            </StackPanel>
+
+            <Menu x:Name="MainMenu" IsMainMenu="True" Padding="10 0" Background="{x:Null}">
+                <MenuItem Header="File" WindowChrome.IsHitTestVisibleInChrome="True" VerticalAlignment="Center" HorizontalAlignment="Center" Height="30" Foreground="#FFD6D6D6" BorderBrush="{x:Null}" Background="{x:Null}">
+                    <MenuItem Header="Open Folder" ToolTip="Open a Tag Directory"/>
+                    <MenuItem Header="Open Tag" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Close Tag" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Close All Tags" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Save Tag" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Save Tag As" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Save All Tags" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Exit" ToolTip="Open a Singular Tag File"/>
+                </MenuItem>
+                <MenuItem Header="Edit" WindowChrome.IsHitTestVisibleInChrome="True" VerticalAlignment="Center" HorizontalAlignment="Center" Height="30" Foreground="#FFD6D6D6" BorderBrush="{x:Null}" Background="{x:Null}">
+                    <MenuItem Header="Tag Directory" ToolTip="Open a Tag Directory"/>
+                    <MenuItem Header="Folder open count" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Struct open count" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Reset view filters" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Reset options" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Check for updates" ToolTip="Open a Singular Tag File"/>
+                </MenuItem>
+                <MenuItem Header="Windows" WindowChrome.IsHitTestVisibleInChrome="True" VerticalAlignment="Center" HorizontalAlignment="Center" Height="30" Foreground="#FFD6D6D6" BorderBrush="{x:Null}" Background="{x:Null}">
+                    <MenuItem Header="Tag Explorer" ToolTip="Open a Tag Directory"/>
+                    <MenuItem Header="Tag Editor" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Hex Viewer" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Plugin Viewer" ToolTip="Open a Singular Tag File"/>
+                    <MenuItem Header="Changes Viewer" ToolTip="Open a Singular Tag File"/>
+                </MenuItem>
+            </Menu>
+            <!--StackPanel FlowDirection="LeftToRight" Orientation="Horizontal">
+                <Button Content="Open" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
+                <Button Content="Save" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
+                <Button Content="Save As" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
+                <Button Content="Settings" Width="50" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FFD6D6D6"/>
+            </StackPanel-->
+        </Grid>
+        <Grid Grid.Row="1">
+            <StackPanel FlowDirection="LeftToRight" Grid.Row="1" Orientation="Horizontal" Margin="5,0,0,0">
+                <Button Content="SV" Width="20"/>
+                <Button Content="SA" Width="20"/>
+                <Button Content="SF" Width="20"/>
+                <Separator Width="1" Height="15" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Background="#FF3D3D3D" Margin="4,2,4,2" />
+                <Button Content="TA" Width="20" Click="Button_OpenTag"/>
+                <Button Content="FO" Width="20" Click="TagExplorer_OpenDirectory"/>
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Row="2" >
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="2*"/>
                 <ColumnDefinition Width="3*"/>
             </Grid.ColumnDefinitions>
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="3*"/>
-                    <RowDefinition Height="2*"/>
-                </Grid.RowDefinitions>
-                <Border BorderBrush="#FF3D3D3D" BorderThickness="1" Margin="5,5,5,5">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="20"/>
-                            <RowDefinition Height="20"/>
-                            <RowDefinition Height="20"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <TextBlock Text="Tag Explorer" Foreground="#FFD6D6D6" Margin="5,0,0,0"/>
-
-                        <StackPanel FlowDirection="LeftToRight" Grid.Row="1" Orientation="Horizontal" Margin="5,0,0,0">
-                            <Button Content="OP" Width="20"  Foreground="#FFD6D6D6" Background="{x:Null}" BorderBrush="{x:Null}"/>
-                            <Button Content="CL" Width="20"  Foreground="#FFD6D6D6" Background="{x:Null}" BorderBrush="{x:Null}"/>
-                            <Separator Width="1" Height="15" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Background="#FF3D3D3D" Margin="4,2,4,2" />
-                            <Button Content="CA" Width="20"  Foreground="#FFD6D6D6" Background="{x:Null}" BorderBrush="{x:Null}"/>
-                            <Button Content="EA" Width="20"  Foreground="#FFD6D6D6" Background="{x:Null}" BorderBrush="{x:Null}"/>
-                            <Separator Width="1" Height="15" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Background="#FF3D3D3D" Margin="4,2,4,2" />
-                            <ToggleButton Content="RE" Width="20" Background="{x:Null}" Foreground="#FFD6D6D6" BorderBrush="{x:Null}"/>
-                        </StackPanel>
-                        <TextBox Text="Search Tag Explorer" Grid.Row="2" BorderBrush="#FF3D3D3D" Background="#FF383838" Foreground="#FFD6D6D6"/>
-                        <ScrollViewer Grid.Row="3">
-                            <TreeView Background="{x:Null}" BorderBrush="{x:Null}">
-                                <TreeViewItem Header="Demo folder" Foreground="White" Background="{x:Null}">
-                                    <TreeViewItem Header="Demo file" Foreground="White" Background="{x:Null}"  />
-                                </TreeViewItem>
-                            </TreeView>
-                        </ScrollViewer>
-                    </Grid>
-                </Border>
-                <Border Grid.Row="1" BorderBrush="#FF3D3D3D" BorderThickness="1" Margin="5,0,5,5">
-
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="20"/>
-                            <RowDefinition Height="20"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
-                        <TextBlock Text="Hex Explorer" Foreground="#FFD6D6D6" Margin="5,0,0,0"/>
-
-                        <StackPanel FlowDirection="LeftToRight" Grid.Row="1" Orientation="Horizontal" Margin="5,0,0,0">
-                            <ToggleButton Content="OF" Width="20" Background="{x:Null}" Foreground="#FFD6D6D6" BorderBrush="{x:Null}"/>
-                            <ToggleButton Content="ST" Width="20" Background="{x:Null}" Foreground="#FFD6D6D6" BorderBrush="{x:Null}"/>
-                            <Separator Width="1" Height="15" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Background="#FF3D3D3D" Margin="4,2,4,2" />
-                            <TextBox Text="18" Width="30" Background="{x:Null}" Foreground="#FFD6D6D6" BorderBrush="#FF3D3D3D" TextAlignment="Right" />
-                            <Separator Width="1" Height="15" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Background="#FF3D3D3D" Margin="4,2,4,2" />
-                            <ToggleButton Content="FO" Width="20" Background="{x:Null}" Foreground="#FFD6D6D6" BorderBrush="{x:Null}"/>
-                        </StackPanel>
-
-                        <Grid Grid.Row="2" Background="#FF1A1A1A" >
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="70"/>
-                                <ColumnDefinition Width="2*"/>
-                                <ColumnDefinition Width="1*"/>
-                            </Grid.ColumnDefinitions>
-                            <TextBlock Foreground="#FFB96E00" FontFamily="Courier New" Text="000F1000 000F1012 000F1024 000F1036 000F1048 000F105A 000F106C 000F107E 000F1090" TextWrapping="WrapWithOverflow" />
-                            <TextBlock Foreground="#FFCECECE" Grid.Column="1" Text="50 72 6F 63 65 73 73 3A 20 46 53 44 2D 57 69 6E 36 34 2D 53 68 69 70 70 69 6E 67 2E 65 78 65 0D 0A 55 45 20 76 65 72 73 69 6F 6E 3A 20 32 37 2E 32 30 0D 0A 54 69 6D 65 53 74 61 6D 70 3A 20 53 61 74 20 4D 61 72 20 20 34 20 31 32 3A 30 34 3A 35 37 20 32 30 32 33 0D 0A 0D 0A 5B 30 30 30 30 30 30 30 30 5D 20 30 30 30 30 30 31 41 44 37 36 30 44 36 33 43 30 20 50 61 63 6B 61 67 65 20 2F 53 63 72 69 70 74 2F 43 6F 72 65 55 4F 62 6A 65 63 74 0D 0A 5B 30 30 30 30 30 30 30 31 5D 20 30 30 30 30 30 31 41 44 36 43 41 44 31 43 43 30 20 43 6C 61 73 73 20 2F 53 63 72 69 70 74 2F 43 6F 72 65 55 4F 62 6A 65 63 74 2E 4F 62 6A 65 63 74 0D 0A 5B 30 30 30 30 30 30 30 32 5D 20 30 30 30 30 30 31 41 44 37 33 41 31 43 39 41 30 20 50 61 63 6B 61 67 65 20 2F 53 63 72 69 70 74 2F 45 6E 67 69 6E 65 0D 0A 5B 30 30 30 30 30 30 30 33 5D 20 30 30 30 30 30 31 41 44 36 44 42 37 43 41 30"
-                                       TextWrapping="WrapWithOverflow" FontFamily="Courier New" />
-                            <TextBlock Foreground="#FF868686" Grid.Column="2" Text="Process:FSDWin64ShippingexeUEversion:2720TimeStamp:SatMar412:04:57202300000000000001AD760D63C0Package/" FontFamily="Courier New" TextWrapping="Wrap" />
-
-                        </Grid>
-                    </Grid>
-                </Border>
-            </Grid>
-            
-            <Grid Grid.Column="1">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="20"/>
-                </Grid.RowDefinitions>
-                <TabControl Grid.Column="1" Background="#FF1A1A1A" BorderBrush="#FF3D3D3D" Margin="0,5,0,0">
-                    <TabItem Header="Saved tag">
-                        <Grid>
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="20"/>
-                                <RowDefinition Height="20"/>
-                                <RowDefinition Height="20"/>
-                                <RowDefinition Height="*"/>
-                            </Grid.RowDefinitions>
-                            <StackPanel Orientation="Horizontal">
-                                <TextBlock Text="D:\tags\test\" Foreground="#FF8E8E8E" Margin="5,0,2,0"/>
-                                <TextBlock Text="example_tag_name.atag" Foreground="#FFD6D6D6"/>
-                            </StackPanel>
-
-                            <TextBox Text="Search parameters" Grid.Row="2" BorderBrush="#FF3D3D3D" Background="#FF383838" Foreground="#FFD6D6D6"/>
-                        </Grid>
-                    </TabItem>
-                    <TabItem Header="Unsaved*">
-                    </TabItem>
-                </TabControl>
-                <StackPanel Orientation="Horizontal" Grid.Row="1" HorizontalAlignment="Left" Margin="0,-1,0,0">
-                    <ComboBox  Width="60" SelectedIndex="0" BorderBrush="#FF2E2E2E" Foreground="#FFD6D6D6">
-                        <ComboBoxItem Content="100%"/>
-                    </ComboBox>
-                    <Button Content="RL" Width="20" Background="#FF1A1A1A" Foreground="#FFD6D6D6" BorderBrush="#FF1A1A1A"/>
-                    <Button Content="CL" Width="20" Background="#FF1A1A1A" Foreground="#FFD6D6D6" BorderBrush="#FF1A1A1A"/>
-                    <ToggleButton Content="AD" Width="20" Background="{x:Null}" Foreground="#FFD6D6D6" BorderBrush="#FF3D3D3D"/>
-                    <ToggleButton Content="A2" Width="20" Background="{x:Null}" Foreground="#FFD6D6D6" BorderBrush="#FF3D3D3D"/>
-                    
-                </StackPanel>
-            </Grid>
+            <Grid x:Name="explorer_socket"/>
+            <GridSplitter Width="5" Background="Transparent"/>
+            <Grid x:Name="tag_socket" Grid.Column="1"/>
         </Grid>
         
+        <!-- ERROR BELT -->
+        <Grid x:Name="DebugPanel" Grid.Row="3" Background="#FF424242" MouseDown="DebugPanel_MouseDown">
+            <TextBlock x:Name="DebugText" Text="Running..." VerticalAlignment="Center" Margin="5,0,0,0" Foreground="#FFD6D6D6" />
+        </Grid>
     </Grid>
 </Window>
