--- a/UI/Interfaces/TagExplorer.xaml
+++ b/UI/Interfaces/TagExplorer.xaml
@@ -20,6 +20,8 @@
             <StackPanel FlowDirection="LeftToRight" Grid.Row="1" Orientation="Horizontal" Margin="5,0,0,0">
                 <Button Content="OD" Width="20" ToolTip="Open a directory" Click="Button_OpenDirectory"/>
                 <Button Content="AD" Width="20" ToolTip="Add a directory" Click="Button_AddDirectory"/>
+                <Button Content="OM" Width="20" ToolTip="Open a module file" Click="Button_OpenModule"/>
+                <Button Content="AM" Width="20" ToolTip="Add a module file" Click="Button_AddModule"/>
                 <Button Content="CL" Width="20" ToolTip="Close this directory" Click="Button_CloseDirectory"/>
                 <Separator Width="1" Height="15" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Background="#FF3D3D3D" Margin="4,2,4,2" />
                 <Button Content="CA" Width="20" ToolTip="Close all open folders" Click="Button_CloseAll"/>
