--- a/UI/Interfaces/TagExplorer.xaml
+++ b/UI/Interfaces/TagExplorer.xaml
@@ -22,6 +22,8 @@
                 <Button Content="AD" Width="20" ToolTip="Add a directory" Click="Button_AddDirectory"/>
                 <Button Content="OM" Width="20" ToolTip="Open a module file" Click="Button_OpenModule"/>
                 <Button Content="AM" Width="20" ToolTip="Add a module file" Click="Button_AddModule"/>
+                <Button Content="OI" Width="20" ToolTip="Open modules from mapinfo file" Click="Button_OpenMapInfo"/>
+                <Button Content="AI" Width="20" ToolTip="Add modules from mapinfo file" Click="Button_AddMapInfo"/>
                 <Button Content="CL" Width="20" ToolTip="Close this directory" Click="Button_CloseDirectory"/>
                 <Separator Width="1" Height="15" Style="{StaticResource {x:Static ToolBar.SeparatorStyleKey}}" Background="#FF3D3D3D" Margin="4,2,4,2" />
                 <Button Content="CA" Width="20" ToolTip="Close all open folders" Click="Button_CloseAll"/>
