--- a/UI/Interfaces/TagInstance.xaml
+++ b/UI/Interfaces/TagInstance.xaml
@@ -24,7 +24,10 @@
                 <Border x:Name="selec_border" BorderBrush="#FF525252" BorderThickness="1" Height="18" Grid.ColumnSpan="3" VerticalAlignment="Top" Visibility="Collapsed"/>
                 
                 <Canvas x:Name="expanders_panel" Grid.Column="1" RenderTransformOrigin="0.5,0.0" Margin="-7.5,0,0,0">
-                    
+
+                </Canvas>
+                <Canvas x:Name="diffs_panel" Grid.Column="0">
+
                 </Canvas>
                 <StackPanel x:Name="params_panel" Grid.Column="2" Margin="5,0,0,0" >
                 </StackPanel>
