--- a/UI/Interfaces/Editor/DiffExpand.xaml
+++ b/UI/Interfaces/Editor/DiffExpand.xaml
@@ -4,9 +4,27 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TagEditor.UI.Interfaces.Editor"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-            
+             mc:Ignorable="d" >
+    <Grid HorizontalAlignment="Right" Width="4" Height="18" Background="#FF00801D">
+        <Button BorderThickness="1" BorderBrush="#FF10D400" Click="Button_Click"/>
+        <Popup x:Name="diff_popup" IsOpen="False" LostFocus="Popup_LostFocus" StaysOpen="False">
+            <Border BorderThickness="1" Background="#FF1A1A1A" BorderBrush="#FF7160E8">
+                <ScrollViewer x:Name="scroll_panel">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition/>
+                        </Grid.RowDefinitions>
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,5" >
+                            <TextBlock x:Name="lines_text" Text="Line: NULL"  Foreground="#FFD6D6D6" Margin="10,0,0,0"/>
+                            <TextBlock x:Name="diffs_text" Text="Diffs: NULL" Foreground="#FFD6D6D6" Margin="10,0,0,0"/>
+                        </StackPanel>
+                        <StackPanel x:Name="content_panel" Grid.Row="1">
+
+                        </StackPanel>
+                    </Grid>
+                </ScrollViewer>
+            </Border>
+        </Popup>
     </Grid>
 </UserControl>
