--- a/UI/Interfaces/TagInstance.xaml
+++ b/UI/Interfaces/TagInstance.xaml
@@ -15,7 +15,7 @@
                     <ColumnDefinition Width="90"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <ItemsControl ItemTemplate="{DynamicResource test_item_template}" x:Name="indexes_panel" Margin="0,0,10,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF6D6D6D"/>
+                <ItemsControl ItemTemplate="{DynamicResource test_item_template}" x:Name="indexes_panel" Margin="0,0,14,0" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF6D6D6D"/>
                 <GridSplitter Width="1" Background="#FFB1B1B1" />
 
                 <ItemsControl ItemTemplate="{DynamicResource test_item_template2}" x:Name="types_panel" Margin="10,0,5,0" Grid.Column="1" Background="{x:Null}" BorderBrush="{x:Null}" Foreground="#FF3AAAE6" />
@@ -26,7 +26,7 @@
                 <Canvas x:Name="expanders_panel" Grid.Column="1" RenderTransformOrigin="0.5,0.0" Margin="-7.5,0,0,0">
 
                 </Canvas>
-                <Canvas x:Name="diffs_panel" Grid.Column="0">
+                <Canvas x:Name="diffs_panel" Grid.Column="1"  RenderTransformOrigin="0.5,0.0" Margin="-11.5,0,0,0">
 
                 </Canvas>
                 <StackPanel x:Name="params_panel" Grid.Column="2" Margin="5,0,0,0" >
