--- a/UI/Interfaces/Editor/DiffItem.xaml
+++ b/UI/Interfaces/Editor/DiffItem.xaml
@@ -10,6 +10,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50"/>
             <ColumnDefinition Width="90"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="20"/>
         </Grid.ColumnDefinitions>
@@ -26,9 +27,12 @@
         <TextBlock x:Name="type_0" Text="NULL" Grid.Column="1" Grid.Row="0" Foreground="#FF00A6FF" Margin="0,0,10,0" VerticalAlignment="Center"/>
         <TextBlock x:Name="type_1" Text="NULL" Grid.Column="1" Grid.Row="1" Foreground="#FF00A6FF" Margin="0,0,10,0" VerticalAlignment="Center"/>
 
-        <TextBlock x:Name="old_value" Text="NULL" Grid.Column="2" Grid.Row="0" Foreground="#FFAEC07B" Margin="0,0,10,0" VerticalAlignment="Center"/>
-        <TextBlock x:Name="new_value" Text="NULL" Grid.Column="2" Grid.Row="1" Foreground="#FFAEC07B" Margin="0,0,10,0" VerticalAlignment="Center"/>
+        <TextBlock x:Name="name_0" Text="NULL" Grid.Column="2" Grid.Row="0" Foreground="#FFD6D6D6" Margin="0,0,10,0" VerticalAlignment="Center"/>
+        <TextBlock x:Name="name_1" Text="NULL" Grid.Column="2" Grid.Row="1" Foreground="#FFD6D6D6" Margin="0,0,10,0" VerticalAlignment="Center"/>
 
-        <Button Grid.Column="3" Grid.Row="1" Content="x" Click="Button_Click" Padding="1,-7,1,0" Foreground="#FFFF2C2C" FontSize="18"/>
+        <TextBlock x:Name="old_value" Text="NULL" Grid.Column="3" Grid.Row="0" Foreground="#FFAEC07B" Margin="0,0,10,0" VerticalAlignment="Center"/>
+        <TextBlock x:Name="new_value" Text="NULL" Grid.Column="3" Grid.Row="1" Foreground="#FFAEC07B" Margin="0,0,10,0" VerticalAlignment="Center"/>
+
+        <Button Grid.Column="4" Grid.Row="0" Content="x" Click="Button_Click" Padding="1,-7,1,0" Foreground="#FFFF2C2C" FontSize="18"/>
     </Grid>
 </UserControl>
